chore: update .scalafmt.conf to use align.tokens.'+'

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -11,7 +11,7 @@ lineEndings = unix
 docstrings.style = Asterisk
 includeCurlyBraceInSelectChains = false
 
-align.tokens.add = [
+align.tokens."+" = [
   {code = ":"},
   {code = ":="},
   {code = "="},
